--- a/src/style.css
+++ b/src/style.css
@@ -48,12 +48,12 @@
   /* 1.200 Minor Third Type Scale */
   --fontSize-0: 0.833rem;
   --fontSize-1: 1rem;
-  --fontSize-2: 1.2rem;
-  --fontSize-3: 1.44rem;
-  --fontSize-4: 1.728rem;
-  --fontSize-5: 2.074rem;
-  --fontSize-6: 2.488rem;
-  --fontSize-7: 2.986rem;
+  --fontSize-2: 1.1rem;
+  --fontSize-3: 1.2rem;
+  --fontSize-4: 1.4rem;
+  --fontSize-5: 1.6rem;
+  --fontSize-6: 1.8rem;
+  --fontSize-7: 2rem;
   --color-primary: #005b99;
   --color-text: #2e353f;
   --color-text-light: #4f5969;
@@ -118,7 +118,7 @@ h6 {
 }
 
 h1 {
-  font-weight: var(--fontWeight-black);
+  font-weight: var(--fontWeight-semibold);
   font-size: var(--fontSize-6);
   color: var(--color-heading-black);
 }
